--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "SimpleMongoDB, simple handler to MongoDB PHP7",
     "keywords": ["mongodb", "php7", "php", "simple"],
     "homepage": "https://github.com/MaCroTux/SimpleMongoDB",
+    "minimum-stability": "dev",
     "authors": [
         { "name": "Javier Feria", "email": "info@javierferia.com" }
     ],
@@ -10,9 +11,9 @@
         "php": ">=7.0",
         "mongodb/mongodb": "1.0.2"
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "require-dev"
+    "autoload": {
+        "psr-4": {
+            "SimpleMongoDB\\": "src/"
         }
     }
 }
