--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SimpleMongoDB, simple handler to MongoDB PHP7",
     "keywords": ["mongodb", "php7", "php", "simple"],
     "homepage": "https://github.com/MaCroTux/SimpleMongoDB",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         { "name": "Javier Feria", "email": "info@javierferia.com" }
     ],
