--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
-    "name": "MaCroTux/SimpleMongoDB",
+    "name": "macrotux/simplemongodb",
     "description": "SimpleMongoDB, simple handler to MongoDB PHP7",
     "keywords": ["mongodb", "php7", "php", "simple"],
     "homepage": "https://github.com/MaCroTux/SimpleMongoDB",
-    "minimum-stability": "dev",
     "authors": [
-        { "name": "Javier Feria", "email": "info@javierferia.com" }
+        { 
+            "name": "Javier Feria", 
+            "email": "info@javierferia.com" 
+        }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.0.*",
         "mongodb/mongodb": "1.0.2"
     },
     "autoload": {
