--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.*",
+        "php": ">=5.3.0",
         "mongodb/mongodb": "1.0.2"
     },
     "autoload": {
