--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "email": "info@javierferia.com" 
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "SimpleMongoDB\\": "src/"
+        }
+    },
     "require": {
         "php": ">=5.5.9",
         "mongodb/mongodb": "1.0.2"
