--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "SimpleMongoDB, simple handler to MongoDB PHP7",
     "keywords": ["mongodb", "php7", "php", "simple"],
     "homepage": "https://github.com/MaCroTux/SimpleMongoDB",
+    "license": "MIT",
     "authors": [
         { 
             "name": "Javier Feria", 
